# atanf-benchmark

./: CMakeLists.txt  README  geomeans.txt  get_gmean.py  result-20-runs.txt
src/: driver.c  svml-bench-gen.h
src/asm/: atanhf-decls.h  atanhf16-dev.S  atanhf16-glibc.S  atanhf4-dev.S  atanhf4-glibc.S  atanhf8-dev.S  atanhf8-glibc.S
src/asm/core/: atanhf16-dev.S  atanhf16-glibc.S  atanhf4-dev.S  atanhf4-glibc.S  atanhf8-dev.S  atanhf8-glibc.S
